<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hermes</string>
    <string name="action_about">About</string>
    <string name="action_viewlog">View log</string>
    <string name="pref_category_trackme">Track me</string>
    <string name="pref_category_trackme_desc">Track me Settings</string>
    <string name="pref_enable_trackme">Enable Track Me</string>
    <string name="pref_enable_trackme_desc">SMS Auto responder is disabled</string>
    <string name="pref_enable_trackme_desc_enabled">SMS Auto responder is enabled</string>
    <string name="pref_settings_trackme">Track me Settings</string>
    <string name="pref_settings_trackme_desc">Edit Track me settings</string>
    <string name="pref_category_livetrack_desc">Live Track Settings</string>
    <string name="pref_category_livetrack">Live Track</string>
    <string name="pref_enable_livetrack_desc">Enable automatic posting of location</string>
    <string name="pref_enable_livetrack">Enable Live Track</string>
    <string name="pref_settings_livetrack_desc">Additional Live Track Settings</string>
    <string name="pref_settings_livetrack">Live Track Settings</string>
    <string name="pref_category_other_desc">Other Settings</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_about">About</string>
    <string name="pref_about_desc">About the Application</string>
    <string name="pref_faq_desc">FAQ about the Application</string>
    <string name="pref_faq">FAQ</string>
    <string name="pref_defautsecret">hermes</string>
    <string name="pref_donate">Donate</string>
    <string name="pref_donate_desc">Using secure Google Play Store in-app payment</string>

    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
   
     <string name="pref_connectfb">Connect</string>
     <string name="pref_connectfb_desc">Connected as </string>
    <string name="pref_setsecretcode">Set Secret code</string>
    <string name="pref_onlyallowcontacts">Only Allow Contacts</string>
    <string name="pref_onlyallowcontacts_desc">SMS will be sent to only contacts</string>
    <string name="pref_selectcontacts">Select Contacts</string>
    <string name="pref_max_rate">Limit response rate</string>
    <string name="pref_max_rate_desc">Set response rate limit to prevent misuse</string>
    <string name="pref_selectcontacts_desc">Select contacts who will be responded to</string>
    <string name="pref_fbinterval">Post Interval</string>
    <string name="pref_fbintervald_desc">Location will be posted at defined interval</string>
    <string name="pref_selectfbfriends">Select Facebook friends</string>
    <string name="pref_selectfbfriends_desc">Select facebook friends to whom your location will be visible</string>
    <string name="pref_fbmessage">Set Default message</string>
    <string name="pref_fbmessage_desc">Set default message to be included with your facebook post</string>
    <string name="pref_trackme_shownotification">Show notification</string>
    <string name="pref_trackme_shownotification_desc">Notification will be displayed when location update is fired through SMS</string>
    <string name="pref_livetrack_shownotification">Show notification</string>
    <string name="pref_livetrack_shownotification_desc">Notification will be displayed whenever location is posted on your timeline</string>
    <string name="pref_shareloc">Share Your location</string>
    <string name="pref_shareloc_desc">Send a Maps link of your last updated location to a friend</string>
    <string name="pref_emptysecret_msg">Empty secret code is not allowed</string>
    
    <string name="noti_sms_senterror">Error sending SMS</string>
    <string name="noti_sms_deliverederror">Error delivering SMS</string>
    <string name="noti_loc_request">Location requested</string>
    <string name="noti_loc_response">Location sent</string>
    <string name="noti_loc_failure">Could not obtain location. Make sure you have enabled access to your location in the \'Location Access\' settings.</string>
    <string name="noti_fb_posted">Your location was successfully posted to Facebook</string>
    <string name="noti_fb_failure">Could not post location to Facebook. The application will retry in few minutes</string>
    <string name="noti_fb_session_failure">Your facebook session has expired. Please connect again in Settings</string>
    <string name="noti_fb_not_connected">Your Facebook account is not integrated. Please connect your Facebook account</string>
    
    <string name="noti_sender_notin_contacts">Location request ignored. Sender not in the contacts</string>
    
    <string name="location_error">Location not enabled</string>
	<string name="location_error_desc">Enable access to your location in the \'Location Access\' settings of your phone. At least one of th etwo options (\'GPS Satellites\' and \'WIFI\' and mobile network location\') must be enabled</string>
 	<string name="app_log_empty">Log is empty. Enable it in \"Advanced settings\".</string>
 	<string name="fbapp_name">Connect to facebook</string>
 	  <string name="app_id">300837480057041</string>
 	  
 	  <string name="ui_dialog_disconnect_msg">Are you sure? You will need to reauthorize your account after disconnecting.</string>
 	  <string name="fb_needs_connecting">Tap to connect your Facebook account (required).</string>
 	  <string name="fb_already_connected">Connected</string>
 	  <string name="fb_already_connectedas">Connected as %s</string>
 	  <string name="exception">Exception: %1$s</string>
 	  
 	  <string name="action_addfriend">Add friend</string>
 	  <string name="action_removefriend">Remove friend</string>
 	  <string name="action_done">Done</string>
 	  
 	  <string name="dialog_zerofriends">You must select atleast one friend</string>
 	  <string name="noti_zerofriends">Could not post location to Facebook. You must select atleast one friend in settings</string>
 	  <string name="toast_livetrackenabled">LiveTrack enabled. Your location will be posted at every %s</string>
 	  <string name="toast_livetrackenabled_fbdisconnected">LiveTrack enabled. Please connect your facebook account in LiveTrack settings</string>
 	  <string name="pref_adv">Advanced Preferences</string>
 	  <string name="pref_adv_desc">Advanced Preferences</string>
 	  <string name="pref_loctimeout">Location polling timeout</string>
 	  <string name="pref_threadtimeout">Location polling thread timeout</string>
 	  <string name="pref_threadtimeout_desc">Timeout interval after which thread initiated to get the location times out.This setting is for advanced users only.Do not change this value unless you know what you are doing</string>
 	  <string name="pref_loctimeout_desc">Timeout interval for which application polls GPS and network listeners. You might want to increase this value if you are getting frequent timeout errors in logs. This setting is for advanced users only. 
 	      Do not change this value unless you know what you are doing</string>
 	      
 	  <string name="pref_enablegeocode">Enable Reverse Geocoding</string>
 	  <string name="pref_enablegeocode_desc">Enable translations of locations co-ordinates to addresses</string>
 	  
 	  <string name="pref_donate">Donate</string>
 	  <string name="pref_donate_desc">Donate securely using Paypal</string>
 	  <string name="fbGrantPermission">Grant Hermes permission to post</string>
</resources>
