<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yourapp="http://schemas.android.com/apk/res-auto"  >
    
      <item
        android:id="@+id/action_addfriend"
        android:orderInCategory="100"
        yourapp:showAsAction="always"
        android:icon="@drawable/ic_action_user_add"
        android:title="@string/action_addfriend"/>
      
         <item
        android:id="@+id/action_removefriend"
        android:orderInCategory="100"
        yourapp:showAsAction="always"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_removefriend"/>

    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        yourapp:showAsAction="always" 
        android:icon="@drawable/ic_action_done"
        android:title="@string/action_done"/>
    
  

</menu>
